--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -6,7 +6,7 @@ server {
         access_by_lua_block {
             ngx.log(ngx.ERR, "KAJSHDKJHASKDJHASKJHKDJASHDKJAHKASJD")
         }
-        return 301 https://$host$request_uri;
+        # return 301 https://$host$request_uri;
     }
 }
 
@@ -14,7 +14,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name siasky.dev;
+    server_name siasky.dev dev3.siasky.dev;
 
     location / {
         # if ($host = siasky.dev) {
