--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80 http2;
+    listen [::]:80 http2;
 
     server_name siasky.dev dev3.siasky.dev;
 
@@ -14,8 +14,8 @@ server {
 }
 
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80 http2 default_server;
+    listen [::]:80 http2 default_server;
 
     location / {
         access_by_lua_block {
