--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -14,8 +14,8 @@ server {
 }
 
 server {
-    listen 80 http2 default_server;
-    listen [::]:80 http2 default_server;
+    listen 80 default_server http2;
+    listen [::]:80 default_server http2;
 
     location / {
         access_by_lua_block {
