--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -5,9 +5,9 @@ server {
     server_name siasky.dev dev3.siasky.dev;
 
     location / {
-        # if ($host = siasky.dev) {
-        #     return 301 https://$host$request_uri;
-        # }
+        if ($host = siasky.dev) {
+            return 301 https://$host$request_uri;
+        }
          
         include /etc/nginx/conf.d/include/location-dnslink;
     }
@@ -18,9 +18,6 @@ server {
     listen [::]:80;
 
     location / {
-        access_by_lua_block {
-            ngx.log(ngx.ERR, "KAJSHDKJHASKDJHASKJHKDJASHDKJAHKASJD")
-        }
-        # return 301 https://$host$request_uri;
+        return 301 https://$host$request_uri;
     }
 }
