--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name siasky.dev dev3.siasky.dev;
+    server_name siasky.dev;
 
     location / {
         if ($host = siasky.dev) {
@@ -14,8 +14,8 @@ server {
 }
 
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
     location / {
         return 301 https://$host$request_uri;
