--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -44,9 +44,10 @@ http {
         '"$http_user_agent" $upstream_response_time '
         '$upstream_bytes_sent $upstream_bytes_received '
         '"$upstream_http_content_type" "$upstream_cache_status" '
-        '"portal_domain" "$sent_http_skynet_skylink" '
+        '"$host" "$sent_http_skynet_skylink" '
         '$upstream_connect_time $upstream_header_time '
-        '$request_time "scheme=$scheme" "host=$host" "server_name=$server_name" "ssl_server_name=$ssl_server_name"';
+        '$request_time "$hns_domain_name" '
+        '>>>>>>> "scheme=$scheme" "host=$host" "server_name=$server_name" "ssl_server_name=$ssl_server_name"';
 
     access_log  logs/access.log  main;
 
