--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -9,6 +9,8 @@ COPY conf.d.templates /etc/nginx/conf.d.templates
 
 # CMD ["sh", "-c", "service cron start;", "/usr/local/openresty/bin/openresty -g daemon off;"]
 CMD [ "sh", "-c", \
-      "CERT_NAME=\${NGINX_PORTAL_API_NAME/\*/wildcard_} cat /etc/nginx/conf.d.templates/server.api.conf | ./mo ; \
+      "./mo < /etc/nginx/conf.d.templates/server.api.conf ; \
+       ./mo < /etc/nginx/conf.d.templates/server.hns.conf ; \
+       ./mo < /etc/nginx/conf.d.templates/server.skylink.conf ; \
        /usr/local/openresty/bin/openresty -g daemon off;" \
     ]
