--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -9,8 +9,8 @@ COPY conf.d.templates /etc/nginx/conf.d.templates
 
 # CMD ["sh", "-c", "service cron start;", "/usr/local/openresty/bin/openresty -g daemon off;"]
 CMD [ "sh", "-c", \
-      "./mo < /etc/nginx/conf.d.templates/server.api.conf ; \
-       ./mo < /etc/nginx/conf.d.templates/server.hns.conf ; \
-       ./mo < /etc/nginx/conf.d.templates/server.skylink.conf ; \
+      "./mo < /etc/nginx/conf.d.templates/server.api.conf > /etc/nginx/conf.d/server.api.conf ; \
+       ./mo < /etc/nginx/conf.d.templates/server.hns.conf > /etc/nginx/conf.d/server.hns.conf; \
+       ./mo < /etc/nginx/conf.d.templates/server.skylink.conf > /etc/nginx/conf.d/server.skylink.conf ; \
        /usr/local/openresty/bin/openresty -g daemon off;" \
     ]
