--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -12,5 +12,5 @@ CMD [ "sh", "-c", \
       "./mo < /etc/nginx/conf.d.templates/server.api.conf > /etc/nginx/conf.d/server.api.conf ; \
        ./mo < /etc/nginx/conf.d.templates/server.hns.conf > /etc/nginx/conf.d/server.hns.conf; \
        ./mo < /etc/nginx/conf.d.templates/server.skylink.conf > /etc/nginx/conf.d/server.skylink.conf ; \
-       /usr/local/openresty/bin/openresty -g 'daemon off';" \
+       /usr/local/openresty/bin/openresty -g \"daemon off;\"" \
     ]
