--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -9,8 +9,8 @@ COPY conf.d.templates /etc/nginx/conf.d.templates
 
 # CMD ["sh", "-c", "service cron start;", "/usr/local/openresty/bin/openresty -g daemon off;"]
 CMD [ "bash", "-c", \
-      "CERT_NAME=${NGINX_PORTAL_API_NAME/\*/wildcard_} ./mo < /etc/nginx/conf.d.templates/server.api.conf > /etc/nginx/conf.d/server.api.conf ; \
-       CERT_NAME=${NGINX_PORTAL_HNS_NAME/\*/wildcard_} ./mo < /etc/nginx/conf.d.templates/server.hns.conf > /etc/nginx/conf.d/server.hns.conf; \
-       CERT_NAME=${NGINX_PORTAL_SKYLINK_NAME/\*/wildcard_} ./mo < /etc/nginx/conf.d.templates/server.skylink.conf > /etc/nginx/conf.d/server.skylink.conf ; \
+      "CERT_NAME=${NGINX_PORTAL_API_NAME/*/wildcard_} ./mo < /etc/nginx/conf.d.templates/server.api.conf > /etc/nginx/conf.d/server.api.conf ; \
+       CERT_NAME=${NGINX_PORTAL_HNS_NAME/*/wildcard_} ./mo < /etc/nginx/conf.d.templates/server.hns.conf > /etc/nginx/conf.d/server.hns.conf; \
+       CERT_NAME=${NGINX_PORTAL_SKYLINK_NAME/*/wildcard_} ./mo < /etc/nginx/conf.d.templates/server.skylink.conf > /etc/nginx/conf.d/server.skylink.conf ; \
        /usr/local/openresty/bin/openresty" \
     ]
