--- a/docker/nginx/conf.d.templates/server.hns.conf
+++ b/docker/nginx/conf.d.templates/server.hns.conf
@@ -2,8 +2,8 @@
 server {
 	server_name {{NGINX_PORTAL_HNS_NAME}}; # example: *.hns.siasky.net
 
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{CERT_NAME}}/{{CERT_NAME}}.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{CERT_NAME}}/{{CERT_NAME}}.key;
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_CERT}}/{{PORTAL_CERT}}.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_CERT}}/{{PORTAL_CERT}}.key;
 	
     include /etc/nginx/conf.d/server/server.hns;
 }
@@ -13,8 +13,8 @@ server {
 server {
 	server_name {{NGINX_SERVER_HNS_NAME}}; # example: *.eu-ger-1.siasky.net
 
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{CERT_NAME}}/{{CERT_NAME}}.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{CERT_NAME}}/{{CERT_NAME}}.key;
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{SERVER_CERT}}/{{SERVER_CERT}}.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{SERVER_CERT}}/{{SERVER_CERT}}.key;
 	
     include /etc/nginx/conf.d/server/server.hns;
 }
