--- a/docker/nginx/conf.d.templates/server.sky.conf
+++ b/docker/nginx/conf.d.templates/server.sky.conf
@@ -1,21 +1,21 @@
-{{#NGINX_PORTAL_API_NAME}}
+{{#NGINX_PORTAL_SKY_NAME}}
 server {
-	server_name {{NGINX_PORTAL_API_NAME}}; # example: siasky.net
+	server_name {{NGINX_PORTAL_SKY_NAME}}; # example: *.siasky.net
 
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_CERT}}/{{PORTAL_CERT}}.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_CERT}}/{{PORTAL_CERT}}.key;
-
-	include /etc/nginx/conf.d/server/server.api;
+	
+	include /etc/nginx/conf.d/server/server.skylink;
 }
-{{/NGINX_PORTAL_API_NAME}}
+{{/NGINX_PORTAL_SKY_NAME}}
 
-{{#NGINX_SERVER_API_NAME}}
+{{#NGINX_SERVER_SKY_NAME}}
 server {
-	server_name {{NGINX_SERVER_API_NAME}}; # example: eu-ger-1.siasky.net
-
+	server_name {{NGINX_SERVER_SKY_NAME}}; # example: *.eu-ger-1.siasky.net
+	
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{SERVER_CERT}}/{{SERVER_CERT}}.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{SERVER_CERT}}/{{SERVER_CERT}}.key;
-
-	include /etc/nginx/conf.d/server/server.api;
+	
+	include /etc/nginx/conf.d/server/server.skylink;
 }
-{{/NGINX_SERVER_API_NAME}}
+{{/NGINX_SERVER_SKY_NAME}}
