--- a/docker/nginx/conf.d.templates/server.api.conf
+++ b/docker/nginx/conf.d.templates/server.api.conf
@@ -6,6 +6,7 @@ server {
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_CERT}}/{{PORTAL_CERT}}.key;
 
 	include /etc/nginx/conf.d/server/server.api;
+	include /etc/nginx/conf.d/server/server.api-dnslink-extension;
 }
 {{/NGINX_PORTAL_API_NAME}}
 
@@ -17,5 +18,6 @@ server {
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{SERVER_CERT}}/{{SERVER_CERT}}.key;
 
 	include /etc/nginx/conf.d/server/server.api;
+	include /etc/nginx/conf.d/server/server.api-dnslink-extension;
 }
 {{/NGINX_SERVER_API_NAME}}
