--- a/docker/nginx/conf.d/server.dnslink.conf
+++ b/docker/nginx/conf.d/server.dnslink.conf
@@ -6,8 +6,8 @@ server {
 }
 
 server {
-    listen 443 default;
-    listen [::]:443 default;
+    listen 443 default_server;
+    listen [::]:443 default_server;
 
     ssl_certificate     /etc/resty-auto-ssl/resty-auto-ssl-fallback.crt;
 	ssl_certificate_key	/etc/resty-auto-ssl/resty-auto-ssl-fallback.key;
