--- a/docker/nginx/conf.d.templates/server.api.conf
+++ b/docker/nginx/conf.d.templates/server.api.conf
@@ -1,5 +1,11 @@
 {{#NGINX_PORTAL_API_NAME}}
 server {
+	server_name {{NGINX_PORTAL_API_NAME}}; # example: eu-ger-1.siasky.net
+	
+	include /etc/nginx/conf.d/server/server.http;
+}
+
+server {
 	server_name {{NGINX_PORTAL_API_NAME}}; # example: siasky.net
 
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_CERT}}/{{PORTAL_CERT}}.crt;
@@ -10,6 +16,12 @@ server {
 {{/NGINX_PORTAL_API_NAME}}
 
 {{#NGINX_SERVER_API_NAME}}
+server {
+	server_name {{NGINX_SERVER_API_NAME}}; # example: eu-ger-1.siasky.net
+
+	include /etc/nginx/conf.d/server/server.http;
+}
+
 server {
 	server_name {{NGINX_SERVER_API_NAME}}; # example: eu-ger-1.siasky.net
 
