--- a/docker/nginx/conf.d.templates/server.hns.conf
+++ b/docker/nginx/conf.d.templates/server.hns.conf
@@ -1,15 +1,25 @@
 {{#NGINX_PORTAL_HNS_NAME}}
 server {
-	server_name {{NGINX_PORTAL_HNS_NAME}}; # example: *.hns.siasky.net
+	server_name {{NGINX_PORTAL_HNS_NAME}}; # example: eu-ger-1.siasky.net
 
+	include /etc/nginx/conf.d/server/server.http;
+}
+
+server {
+	server_name {{NGINX_PORTAL_HNS_NAME}}; # example: *.hns.siasky.net
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_CERT}}/{{PORTAL_CERT}}.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_CERT}}/{{PORTAL_CERT}}.key;
-	
     include /etc/nginx/conf.d/server/server.hns;
 }
 {{/NGINX_PORTAL_HNS_NAME}}
 
 {{#NGINX_SERVER_HNS_NAME}}
+server {
+	server_name {{NGINX_SERVER_HNS_NAME}}; # example: eu-ger-1.siasky.net
+
+	include /etc/nginx/conf.d/server/server.http;
+}
+
 server {
 	server_name {{NGINX_SERVER_HNS_NAME}}; # example: *.eu-ger-1.siasky.net
 
