--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -74,10 +74,38 @@ http {
     # proxy cache definition
     proxy_cache_path /data/nginx/cache levels=1:2 keys_zone=skynet:10m max_size=50g inactive=48h use_temp_path=off;
 
+    # The "auto_ssl" shared dict should be defined with enough storage space to
+    # hold your certificate data. 1MB of storage holds certificates for
+    # approximately 100 separate domains.
+    lua_shared_dict auto_ssl 1m;
+
+    # The "auto_ssl_settings" shared dict is used to temporarily store various settings
+    # like the secret used by the hook server on port 8999. Do not change or
+    # omit it.
+    lua_shared_dict auto_ssl_settings 64k;
+
     # this runs before forking out nginx worker processes
     init_by_lua_block { 
         require "cjson" 
         require "resty.http"
+
+        auto_ssl = (require "resty.auto-ssl").new()
+
+        -- Define a function to determine which SNI domains to automatically handle
+        -- and register new certificates for. Defaults to not allowing any domains,
+        -- so this must be configured.
+        auto_ssl:set("allow_domain", function(domain)
+            return true
+        end)
+
+        -- use letsencrypt staging environment
+        auto_ssl:set("ca", "https://acme-staging-v02.api.letsencrypt.org/directory")
+
+        auto_ssl:init()
+    }
+
+    init_worker_by_lua_block {
+        auto_ssl:init_worker()
     }
 
     # include skynet-portal-api and skynet-server-api header on every request
