--- a/docker/nginx/conf.d/server.dnslink.conf
+++ b/docker/nginx/conf.d/server.dnslink.conf
@@ -3,6 +3,13 @@ server {
     listen [::]:80 default_server;
     
     include /etc/nginx/conf.d/server/server.dnslink;
+
+    # Endpoint used for performing domain verification with Let's Encrypt.
+    location /.well-known/acme-challenge/ {
+        content_by_lua_block {
+            auto_ssl:challenge_server()
+        }
+    }
 }
 
 server {
@@ -11,6 +18,27 @@ server {
 
     ssl_certificate     /etc/resty-auto-ssl/resty-auto-ssl-fallback.crt;
 	ssl_certificate_key	/etc/resty-auto-ssl/resty-auto-ssl-fallback.key;
+
+    # Dynamic handler for issuing or returning certs for SNI domains.
+    ssl_certificate_by_lua_block {
+      auto_ssl:ssl_certificate()
+    }
     
     include /etc/nginx/conf.d/server/server.dnslink;
+}
+
+# Internal server running on port 8999 for handling certificate tasks.
+server {
+    listen 127.0.0.1:8999;
+
+    # Increase the body buffer size, to ensure the internal POSTs can always
+    # parse the full POST contents into memory.
+    client_body_buffer_size 128k;
+    client_max_body_size 128k;
+
+    location / {
+        content_by_lua_block {
+            auto_ssl:hook_server()
+        }
+    }
 }
