--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -99,7 +99,7 @@ http {
         end)
 
         -- use letsencrypt staging environment
-        # auto_ssl:set("ca", "https://acme-staging-v02.api.letsencrypt.org/directory")
+        -- auto_ssl:set("ca", "https://acme-staging-v02.api.letsencrypt.org/directory")
 
         auto_ssl:init()
     }
