--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -46,8 +46,7 @@ http {
         '"$upstream_http_content_type" "$upstream_cache_status" '
         '"$host" "$sent_http_skynet_skylink" '
         '$upstream_connect_time $upstream_header_time '
-        '$request_time "hns_domain_name" '
-        '>>>>>>> "scheme=$scheme" "host=$host" "server_name=$server_name" "ssl_server_name=$ssl_server_name"';
+        '$request_time "hns_domain_name"';
 
     access_log  logs/access.log  main;
 
