lite resty http

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -75,7 +75,7 @@ http {
     # this runs before forking out nginx worker processes
     init_by_lua_block { 
         require "cjson" 
-        -- require "resty.http"
+        require "resty.http"
     }
 
     # include skynet-portal-api and skynet-server-api header on every request
