lite resty http

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -35,7 +35,7 @@ events {
 }
 
 http {
-    lua_package_path '/etc/nginx/conf.d/?.lua;;';
+    lua_package_path '/etc/nginx/conf.d/resty/?.lua;;';
 
     include       mime.types;
     default_type  application/octet-stream;
@@ -75,7 +75,7 @@ http {
     # this runs before forking out nginx worker processes
     init_by_lua_block { 
         require "cjson" 
-        require "lua.resty.http"
+        require "resty_http"
     }
 
     # include skynet-portal-api and skynet-server-api header on every request
