add skynetsw redirect

--- a/packages/skynetsw/Dockerfile
+++ b/packages/skynetsw/Dockerfile
@@ -1,14 +1,7 @@
 FROM node:16.5.0-alpine
 
-ENV HOST=0.0.0.0
-
 WORKDIR /usr/app
 
-COPY package.json yarn.lock ./
+COPY index.js skynetsw.html ./
 
-RUN yarn --frozen-lockfile
-
-COPY public ./public
-COPY src ./src
-
-CMD ["sh", "-c", "yarn build && yarn start"]
+CMD ["sh", "-c", "node index.js"]
