--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -22,6 +22,7 @@
     "formik": "2.2.9",
     "http-status-codes": "2.1.4",
     "ky": "0.25.1",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
     "postcss": "8.3.8",
     "prettier": "2.4.1",
